Fixing non-visible title page with small screens.

--- a/src/app/routes/blog/sub-components/blog-displayer/blog-displayer.component.scss
+++ b/src/app/routes/blog/sub-components/blog-displayer/blog-displayer.component.scss
@@ -56,4 +56,7 @@ h2 {
     #blog-grid {
         display: block;
     }
+    #container {
+        padding-top: 10%;
+    }
 }
